updated the icon

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-gray-800 text-white text-center p-4 mt-10">
     <div class="flex justify-center items-center mb-2">
-      <img src="../../../assets/asifvisas-logo.png" alt="AsifVisas Logo" class="h-8 mr-2">
+      <img src="../../../assets/asifvisas-logo.jpg" alt="AsifVisas Logo" class="h-8 mr-2">
       <span class="text-lg font-bold">AsifVisas</span>
     </div>
     <p>© 2025 AsifVisas. All rights reserved.</p>
