--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
     <nav class="bg-blue-600 p-4 text-white flex justify-between items-center">
         <div class="flex items-center">
-          <img src="../../../assets/asifvisas-logo.png" alt="AsifVisas Logo" class="h-10 mr-3">
+          <img src="../../../assets/asifvisas-logo.jpg" alt="AsifVisas Logo" class="h-10 mr-3">
           <span class="text-xl font-bold">AsifVisas</span>
         </div>
         <button class="block md:hidden" (click)="toggleMenu()">
