--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/8919207812" target="_blank" class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg flex items-center justify-center">
+  <img src="assets/whatsapp-icon.png" alt="WhatsApp" class="h-6 w-6">
+</a>
