updated the message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 </div>
 <app-footer></app-footer>
 <!-- WhatsApp Floating Button -->
-<a href="https://wa.me/+918919207812?text=Hi%20this%20is%20Meer!!%20from%20AsifVisas.%20How%20can%20I%20help%20you%20today?" target="_blank" class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg flex items-center justify-center">
-  <img src="../assets/whats-app-icon.jpg" alt="WhatsApp" class="h-6 w-6">
+<a href="https://wa.me/+918919207812?text=Hi%20I%20need%20to%20talk%20to%20AsifVisas%20support%20team.Hi%20this%20is%20Meer!!%20from%20AsifVisas.%20How%20can%20I%20help%20you%20today?" target="_blank" class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg flex items-center justify-center">
+  <img src="assets/whatsapp-icon.png" alt="WhatsApp" class="h-6 w-6">
 </a>
