--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -4,3 +4,4 @@
   <h1 class="text-2xl font-bold mt-4">About Me</h1>
   <p class="mt-2 text-gray-700">I am a dedicated professional providing expert visa consultancy services. My company specializes in guiding clients through the entire visa process, from DS-160 application processing to visa approval. We ensure clear communication, assisting clients at every step, answering all their doubts, and suggesting the most suitable visa options.</p>
 </div>
+<app-services></app-services>
